<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="ballot_logo_description">ballot logo</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="there_s_something_wrong_with_this_elections_please_try_again">There\'s something wrong with this election. Please try again!</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="back">Back</string>
    <string name="representative_avatar">representative avatar</string>
    <string name="open_twitter">Open twitter</string>
    <string name="open_facebook">Open Facebook</string>
    <string name="open_wiki">Open Wiki</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use my location</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="loading">Loading</string>
    <string name="error_connection_occur">Error connection occur</string>
    <string name="permission_denied">You need to enable location permission to use this function :)</string>
    <string name="settings">Setting</string>


</resources>
