<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="hautc.study.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:text="@string/representative_search"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_16dp"
            android:autofillHints=""
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.userAddress.line1}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_h_0dp"
            android:layout_marginHorizontal="@dimen/margin_padding_16dp"
            android:autofillHints=""
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.userAddress.line2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:layout_width="@dimen/w_h_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:autofillHints=""
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.userAddress.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="@dimen/w_h_0dp"
            android:layout_height="@dimen/w_h_0dp"
            android:layout_marginEnd="@dimen/margin_padding_16dp"
            android:autofillHints=""
            android:entries="@array/states"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city" />


        <EditText
            android:id="@+id/zip"
            android:layout_width="@dimen/w_h_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:autofillHints=""
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.userAddress.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />


        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_16dp"
            android:text="@string/find_my_representatives"
            app:layout_constraintTop_toBottomOf="@id/zip" />


        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_16dp"
            android:text="@string/use_my_location"
            app:layout_constraintTop_toBottomOf="@id/button_search" />


        <TextView
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:text="@string/my_representatives"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRepresentative"
            android:layout_width="@dimen/w_h_0dp"
            android:layout_height="@dimen/w_h_0dp"
            android:layout_marginBottom="@dimen/margin_padding_4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            motion:itemCount="3"
            motion:listitem="@layout/representative_item_layout" />

        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/w_h_0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            motion:visibilityMode="ignore" />

        <ImageView
            android:id="@+id/loading_indicator"
            android:layout_width="@dimen/w_h_loading"
            android:layout_height="@dimen/w_h_loading"
            android:contentDescription="@string/loading"
            android:src="@drawable/loading_animation"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/rvRepresentative"
            app:layout_constraintEnd_toEndOf="@id/rvRepresentative"
            app:layout_constraintStart_toStartOf="@id/rvRepresentative"
            app:layout_constraintTop_toTopOf="@id/rvRepresentative" />

        <ImageView
            android:id="@+id/ivErrorConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/error_connection_occur"
            android:src="@drawable/ic_connection_error"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/rvRepresentative"
            app:layout_constraintEnd_toEndOf="@id/rvRepresentative"
            app:layout_constraintStart_toStartOf="@id/rvRepresentative"
            app:layout_constraintTop_toTopOf="@id/rvRepresentative" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>